# TDjango

./: .gitignore  README.MD  db.sqlite3  manage.py  pyproject.toml  requirements.txt
TDjango/: asgi.py  settings.py  urls.py  wsgi.py
portfolio/: admin.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_homemodel_home_image.py  0003_alter_homemodel_home_image.py  0004_alter_homemodel_home_image.py  0005_alter_homemodel_home_image.py  0006_homemodel_home_desc.py  0007_alter_homemodel_home_desc.py  0008_aboutmodel.py  0009_aboutmodel_about_page_desc.py
templates/: base.html
templates/includes/: footer.html  head.html  navbar.html  scripts.html
templates/portfolio/: about.html  home.html
